--- a/angular/src/app/main/reconcilliation/reconcilliation.component.html
+++ b/angular/src/app/main/reconcilliation/reconcilliation.component.html
@@ -171,7 +171,7 @@
                                             <span class="">{{item.accountNumber}}</span>
                                             
                                         </td>
-                                        <td class="accountName-cell" (click)="reDirectToItemizedAmotized(item.reconciliationTypeId,item.id,item.accountNumber,item.accountName)">
+                                        <td class="accountName-cell" (click)="reDirectToItemizedAmotized(item.reconciliationTypeId,item.id,item.accountNumber,item.accountName,item.lock)">
                                             <span class="task-box">{{item.accountName}}</span>
                                         </td>
                                         <td class="accountType-cell">
@@ -184,7 +184,7 @@
                                             <span class=""> $ {{item.balance  | formater}}</span>
                                         </td>
                                        
-                                        <td class="assignee-cell">
+                                        <td [ngClass]="{'disabled':item.lock}"  class="assignee-cell">
                                             <div *ngIf="item.id != rowid" class="kt-user-card-v2"
                                                 (click)="openFieldUpdateAssignee(item.id)">
                                                 <div class="kt-user-card-v2__pic">
@@ -209,7 +209,7 @@
                                         </td>
                                         <td class="action-cell">
                                             <form class="task-report-form">
-                                                <select onclick="console.log('test')"
+                                                <select [disabled]="item.lock" onclick="console.log('test')"
                                                     (change)="ChangeStatus($event.target.value,item.id)"
                                                     class="form-control border-0 {{item.statusBoxColor}} text-white">
                                                     <option value="" selected disabled hidden>
@@ -241,7 +241,7 @@
                                                         <span class=""> $ 111</span>
                                                     </div>
                                                 </li>
-                                                <li  class="assignee-cell collapsable-cell kt-user-card-v2">
+                                                <li [ngClass]="{'disabled':item.lock}"  class="assignee-cell collapsable-cell kt-user-card-v2">
                                                     <div class="thead-box"><b>Assignee : </b></div>
                                                     <div  *ngIf="item.id != rowid" (click)="openFieldUpdateAssignee(item.id)" class="tdata-box">
                                                         <div class="kt-user-card-v2__pic">
@@ -265,7 +265,7 @@
                                                     <div class="thead-box"><b>Action : </b></div>
                                                     <form class="task-report-form">
                                                         <form class="task-report-form">
-                                                            <select onclick="console.log('test')"
+                                                            <select [disabled]="item.lock"  onclick="console.log('test')"
                                                                 (change)="ChangeStatus($event.target.value,item.id)"
                                                                 class="form-control border-0 {{item.statusBoxColor}} text-white">
                                                                 <option value="" selected disabled hidden>
