date change fix.

--- a/angular/src/app/main/reconcilliation/reconcilliation.component.html
+++ b/angular/src/app/main/reconcilliation/reconcilliation.component.html
@@ -22,7 +22,7 @@
                     <div class="record-card-header">
                         <div class="record-card-header-bottom">
                             <div class="record-card-header-bottom-inner1">
-                                <h5>March 2020</h5>
+                                <h5>{{currentDate | momentFormat:'MMMM YYYY'}}</h5>
                             </div>
                             <div class="record-card-header-bottom-inner2">
                               
