--- a/angular/src/app/main/account/accounts/accounts.component.html
+++ b/angular/src/app/main/account/accounts/accounts.component.html
@@ -268,7 +268,7 @@
                                             <span class="">{{item.reconciliationType}}</span>
                                         </td>
 
-                                        <td class="assignee-cell">
+                                        <td [ngClass]="{'disabled':item.lock}" class="assignee-cell">
                                             <div *ngIf="item.id != rowid" class="kt-user-card-v2"
                                                 (click)="openFieldUpdateAssignee(item.id)">
                                                 <div class="kt-user-card-v2__pic">
@@ -323,7 +323,7 @@
                                                         <span class="">{{item.reconciliationType}}</span>
                                                     </div>
                                                 </li>
-                                                <li  class="assignee-cell collapsable-cell kt-user-card-v2">
+                                                <li [ngClass]="{'disabled':item.lock}" class="assignee-cell collapsable-cell kt-user-card-v2">
                                                     <div class="thead-box"><b>Assignee : </b></div>
                                                     <div  *ngIf="item.id != rowid" (click)="openFieldUpdateAssignee(item.id)" class="tdata-box">
                                                         <div class="kt-user-card-v2__pic">
@@ -343,7 +343,7 @@
                                                         <app-user-list-component  (callBack)="refreshGrid()"  taskId = {{item.id}} comingChangeReguest="accounts" userId = {{item.assigneeId}} ></app-user-list-component>
                                                     </div>
                                                 </li>
-                                                <li class="action-cell-item collapsable-cell">
+                                                <li  class="action-cell-item collapsable-cell">
                                                     <div class="thead-box"><b>Action : </b></div>
                                                     <div class="tdata-box">
                                                         <div class="btn-group">
