--- a/angular/src/app/main/reconcilliation/amortized/amortized.component.html
+++ b/angular/src/app/main/reconcilliation/amortized/amortized.component.html
@@ -338,16 +338,16 @@
                                             <td class="text-blue">$ {{netAmount | formater}}</td>
                                         </tr>
                                         <tr>
-                                            <td class="text-navyblue">Total Balance:</td>
-                                            <td class="text-blue">$0</td>
-                                            <td class="text-blue">$0</td>
-                                            <td class="text-blue">$0</td>
+                                            <td class="text-navyblue">Trial Balance:</td>
+                                            <td class="text-blue"  >${{trialBalanceBeginning | formater}}</td>
+                                            <td class="text-blue"  >${{trialBalanceAccured | formater}}</td>
+                                            <td class="text-blue"  >${{trialBalanceNet | formater}}</td>
                                         </tr>
                                         <tr>
                                             <td class="text-navyblue">Varience:</td>
-                                            <td class="text-blue">$0</td>
-                                            <td class="text-blue">$0</td>
-                                            <td class="text-blue">$0</td>
+                                            <td class="text-blue" >$ {{varianceBeginning | formater}}</td>
+                                            <td class="text-blue" >$ {{varianceAccured | formater}}</td>
+                                            <td class="text-blue" >$ {{varianceNet | formater}}</td>
                                         </tr>
                                     </tbody>
                                 </table>
