--- a/angular/src/app/main/checklist/edit-task/edit-task.component.html
+++ b/angular/src/app/main/checklist/edit-task/edit-task.component.html
@@ -170,7 +170,7 @@
                                             <div class="input-group-prepend">
                                                 <span class="input-group-text">
                                                     <label class="kt-radio kt-radio--single kt-radio--success">
-                                                        <input type="radio" [(checked)]="isChecked" name="endOn">
+                                                        <input type="radio" [(checked)]="isChecked" name="dueOn">
                                                         <span></span>
                                                     </label>
                                                 </span>
@@ -181,6 +181,7 @@
                                                     </option>
                                                 </select>
                                             </div>
+                                            
                                             <label class="daysBefore">{{daysBeforeAfter}}</label>
                                         </div>
                                     </div>
@@ -208,8 +209,9 @@
                                         <select class="border border-default bg-white form-control input-medium"
                                             (change)="onDaysClick($event.target.value)"
                                             [(ngModel)]="getTaskForEdit.dayBeforeAfter">
-                                            <option value=true>Days Before</option>
-                                            <option value=false>Days After</option>
+                                            <option value=null disabled hidden>None</option>
+                                            <option value=true>{{"DaysBefore" | localize}}</option>
+                                            <option value=false>{{"DaysAfter" | localize}}</option>
                                         </select>
                                     </div>
                                     <div class="duplicate_box">
@@ -231,8 +233,8 @@
                                     <div class="kt-radio-list eom-radio">
                                         <span></span>
                                         <label class="kt-radio kt-radio--brand" name="radio5">
-                                            <input type="radio" value="checklist.endOfMonth" name="endOn"
-                                                (change)="handleRadioChange()" [(ngModel)]="checklist.endOfMonth">End of
+                                            <input type="radio" value="true" name="endOn"
+                                                (click)="handleRadioChange()" [(ngModel)]="getTaskForEdit.endOfMonth">End of
                                             month
                                             <span></span>
                                         </label>
